--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,1 +1,15 @@
-<p>registration works!</p>
+<div>
+  <h2>Registration Form</h2>
+  <form>
+    <div>
+      <label>Username:</label>
+      <input [(ngModel)]="username" name="username" placeholder="Enter your username" />
+    </div>
+    <div>
+      <label>Password:</label>
+      <input [(ngModel)]="password" name="password" placeholder="Enter your password" />
+    </div>
+    <button type="button" (click)="onSubmit()">Register</button>
+  </form>
+  <p>You entered: {{username}}, {{password}}</p>
+</div>
